# libcurl_cpp_wrapper

./: CMakeLists.txt  main.cpp  readme.md
curl_client/: CMakeLists.txt  curl_client.h
curl_client/src/: connection_data.cpp  connection_data.h  const_curl_codes.h  const_values.h  curl_handler.cpp  curl_handler.h  header.hpp  json.h  query.hpp  request.cpp  request.h  response.hpp  shared_from_this.hpp  str_utils.hpp  url.cpp  url.h
lib/: CMakeLists.txt  curl_client.h
lib/include/: const_curl_codes.h  const_values.h  curl_handler.h  data_structures.h  request.h  utils.h
lib/src/: curl_handler.cpp  data_structures.cpp  json.cpp  request.cpp  utils.cpp
lib/tests/: request_tests.cpp
tests/: CMakeLists.txt  main.cpp  tests_basic_example.cpp  tests_echo_returns.cpp  tests_examples.cpp  tests_headers.cpp  tests_payload.cpp  tests_statuses.cpp  tests_verbs.cpp
